Remove spacial charachter and Round minutes to 15

--- a/src/Notebooks/0_Analysis/Analysis.ipynb
+++ b/src/Notebooks/0_Analysis/Analysis.ipynb
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge1 = est0.merge(est1, on = 'Data / Hora', how = 'outer', suffixes = ('_0', '_1'))"
+    "merge1 = est0.merge(est1, on = 'Data_Hora', how = 'outer', suffixes = ('_0', '_1'))"
    ]
   },
   {
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge2 = est2.merge(est3, on = 'Data / Hora', how = 'outer', suffixes = ('_2', '_3'))"
+    "merge2 = est2.merge(est3, on = 'Data_Hora', how = 'outer', suffixes = ('_2', '_3'))"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "source": [
     "new_cols = []\n",
     "for col in est4.columns:\n",
-    "    if col != 'Data / Hora':\n",
+    "    if col != 'Data_Hora':\n",
     "        col = col + '_4'\n",
     "    new_cols.append(col)\n",
     "    \n",
@@ -110,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge3 = merge1.merge(merge2, on = 'Data / Hora', how = 'outer')"
+    "merge3 = merge1.merge(merge2, on = 'Data_Hora', how = 'outer')"
    ]
   },
   {
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final = merge3.merge(est4, on = 'Data / Hora', how = 'outer')"
+    "final = merge3.merge(est4, on = 'Data_Hora', how = 'outer')"
    ]
   },
   {
@@ -130,23 +130,23 @@
     {
      "data": {
       "text/plain": [
-       "Index(['Data_0', 'Hora_0', 'Data / Hora', 'UmidadeRelativa_0',\n",
-       "       'PressaoAtmosferica_0', 'Temperatura do Ar_0', 'TemperaturaInterna_0',\n",
+       "Index(['Data_0', 'Hora_0', 'Data_Hora', 'UmidadeRelativa_0',\n",
+       "       'PressaoAtmosferica_0', 'TemperaturaDoAr_0', 'TemperaturaInterna_0',\n",
        "       'PontoDeOrvalho_0', 'SensacaoTermica_0', 'RadiacaoSolar_0',\n",
        "       'DirecaoDoVento_0', 'VelocidadeDoVento_0', 'Precipitacao_0', 'Local_0',\n",
        "       'Data_1', 'Hora_1', 'UmidadeRelativa_1', 'PressaoAtmosferica_1',\n",
-       "       'Temperatura do Ar_1', 'TemperaturaInterna_1', 'PontoDeOrvalho_1',\n",
+       "       'TemperaturaDoAr_1', 'TemperaturaInterna_1', 'PontoDeOrvalho_1',\n",
        "       'SensacaoTermica_1', 'RadiacaoSolar_1', 'DirecaoDoVento_1',\n",
        "       'VelocidadeDoVento_1', 'Precipitacao_1', 'Local_1', 'Data_2', 'Hora_2',\n",
-       "       'UmidadeRelativa_2', 'PressaoAtmosferica_2', 'Temperatura do Ar_2',\n",
+       "       'UmidadeRelativa_2', 'PressaoAtmosferica_2', 'TemperaturaDoAr_2',\n",
        "       'TemperaturaInterna_2', 'PontoDeOrvalho_2', 'SensacaoTermica_2',\n",
        "       'RadiacaoSolar_2', 'DirecaoDoVento_2', 'VelocidadeDoVento_2',\n",
        "       'Precipitacao_2', 'Local_2', 'Data_3', 'Hora_3', 'UmidadeRelativa_3',\n",
-       "       'PressaoAtmosferica_3', 'Temperatura do Ar_3', 'TemperaturaInterna_3',\n",
+       "       'PressaoAtmosferica_3', 'TemperaturaDoAr_3', 'TemperaturaInterna_3',\n",
        "       'PontoDeOrvalho_3', 'SensacaoTermica_3', 'RadiacaoSolar_3',\n",
        "       'DirecaoDoVento_3', 'VelocidadeDoVento_3', 'Precipitacao_3', 'Local_3',\n",
        "       'Data_4', 'Hora_4', 'UmidadeRelativa_4', 'PressaoAtmosferica_4',\n",
-       "       'Temperatura do Ar_4', 'TemperaturaInterna_4', 'PontoDeOrvalho_4',\n",
+       "       'TemperaturaDoAr_4', 'TemperaturaInterna_4', 'PontoDeOrvalho_4',\n",
        "       'SensacaoTermica_4', 'RadiacaoSolar_4', 'DirecaoDoVento_4',\n",
        "       'VelocidadeDoVento_4', 'Precipitacao_4', 'Local_4'],\n",
        "      dtype='object')"
