--- a/src/Notebooks/1_Clean/Clean - Info Pluviometrica.ipynb
+++ b/src/Notebooks/1_Clean/Clean - Info Pluviometrica.ipynb
@@ -52,7 +52,7 @@
     "    '''\n",
     "    df.columns = (list(df.iloc[2].values)) # Get column names\n",
     "    df = df.loc[:, df.columns.notnull()]   # Remove nan columns\n",
-    "    df = df[~((df['Data / Hora'] == 'Data / Hora') &\n",
+    "    df = df[~((df['Data_Hora'] == 'Data_Hora') &\n",
     "              (df['Pressão Atmosférica'] == 'Pressão Atmosférica'))] # Remove all headers\n",
     "\n",
     "    df = df[df.iloc[:,0].str.contains(':', na = False) &\n",
@@ -60,16 +60,16 @@
     "\n",
     "    df.insert(0, 'Data','')\n",
     "    df.insert(1, 'Hora','')\n",
-    "    df[['Data', 'Hora']] = df['Data / Hora'].str.split(expand = True)\n",
-    "    #df.drop('Data / Hora', axis = 1, inplace = True) # Split into 2 columns\n",
+    "    df[['Data', 'Hora']] = df['Data_Hora'].str.split(expand = True)\n",
+    "    #df.drop('Data_Hora', axis = 1, inplace = True) # Split into 2 columns\n",
     "    \n",
     "    drop_cols = [4, 6, 7, 10, 12, 14, 15, 17, 20, 22 ]\n",
     "    #    drop_cols = [3, 5, 6, 9, 11, 12, 14, 16, 19, 2]\n",
     "    df = df.drop(df.columns[drop_cols],axis=1)\n",
     "\n",
-    "    col_names = ['Data', 'Hora', 'Data / Hora',\n",
+    "    col_names = ['Data', 'Hora', 'Data_Hora',\n",
     "                 'UmidadeRelativa', 'PressaoAtmosferica',\n",
-    "                 'Temperatura do Ar', 'TemperaturaInterna',\n",
+    "                 'TemperaturaDoAr', 'TemperaturaInterna',\n",
     "                 'PontoDeOrvalho', 'SensacaoTermica',\n",
     "                 'RadiacaoSolar', 'DirecaoDoVento',\n",
     "                 'VelocidadeDoVento', 'Precipitacao']\n",
@@ -106,7 +106,7 @@
     "def include_mean(df):\n",
     "    col_names = ['UmidadeRelativa_', 'PressaoAtmosferica_', 'SensacaoTermica_', \n",
     "                 'RadiacaoSolar_', 'DirecaoDoVento_', 'VelocidadeDoVento_', 'Precipitacao_',\n",
-    "                 'PontoDeOrvalho_', 'Temperatura do Ar_', 'TemperaturaInterna_']\n",
+    "                 'PontoDeOrvalho_', 'TemperaturaDoAr_', 'TemperaturaInterna_']\n",
     "    \n",
     "    for col_name in col_names:\n",
     "        selected_cols = [col for col in df.columns if col_name in col]\n",
@@ -215,15 +215,15 @@
    "source": [
     "# Merge\n",
     "keys = list(concatenated.keys())\n",
-    "estacao0 = concatenated[keys[0]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data / Hora'])\n",
-    "estacao1 = concatenated[keys[1]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data / Hora'])\n",
-    "estacao2 = concatenated[keys[2]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data / Hora'])\n",
-    "estacao3 = concatenated[keys[3]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data / Hora'])\n",
-    "estacao4 = concatenated[keys[4]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data / Hora'])\n",
+    "estacao0 = concatenated[keys[0]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data_Hora'])\n",
+    "estacao1 = concatenated[keys[1]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data_Hora'])\n",
+    "estacao2 = concatenated[keys[2]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data_Hora'])\n",
+    "estacao3 = concatenated[keys[3]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data_Hora'])\n",
+    "estacao4 = concatenated[keys[4]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data_Hora'])\n",
     "\n",
-    "merge1 = estacao0.merge(estacao1, on = 'Data / Hora', how = 'outer', suffixes = ('_0', '_1'))\n",
-    "merge2 = estacao2.merge(estacao3, on = 'Data / Hora', how = 'outer', suffixes = ('_2', '_3'))\n",
-    "merge3 = merge1.merge(merge2, on = 'Data / Hora', how = 'outer')\n"
+    "merge1 = estacao0.merge(estacao1, on = 'Data_Hora', how = 'outer', suffixes = ('_0', '_1'))\n",
+    "merge2 = estacao2.merge(estacao3, on = 'Data_Hora', how = 'outer', suffixes = ('_2', '_3'))\n",
+    "merge3 = merge1.merge(merge2, on = 'Data_Hora', how = 'outer')\n"
    ]
   },
   {
@@ -235,20 +235,20 @@
     "# Manualy ad suffixes to estacao4\n",
     "new_cols = []\n",
     "for col in estacao4.columns:\n",
-    "    if col != 'Data / Hora':\n",
+    "    if col != 'Data_Hora':\n",
     "        col = col + '_4'\n",
     "    new_cols.append(col)\n",
     "estacao4.columns = new_cols\n",
     "\n",
-    "merged = merge3.merge(estacao4, on = 'Data / Hora', how = 'outer')\n",
+    "merged = merge3.merge(estacao4, on = 'Data_Hora', how = 'outer')\n",
     "\n",
     "merged.insert(0, 'Data','')\n",
     "merged.insert(1, 'Hora','')\n",
-    "merged[['Data', 'Hora']] = merged['Data / Hora'].str.split(expand = True)\n",
+    "merged[['Data', 'Hora']] = merged['Data_Hora'].str.split(expand = True)\n",
     "\n",
-    "# Sort By Data / Hora\n",
-    "merged['Data / Hora'] = pd.to_datetime(merged['Data / Hora'])\n",
-    "merged = merged.sort_values('Data / Hora').reset_index()"
+    "# Sort By Data_Hora\n",
+    "merged['Data_Hora'] = pd.to_datetime(merged['Data_Hora'])\n",
+    "merged = merged.sort_values('Data_Hora').reset_index()"
    ]
   },
   {
