--- a/src/Notebooks/2_Repair/test_LowPass.ipynb
+++ b/src/Notebooks/2_Repair/test_LowPass.ipynb
@@ -27,7 +27,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Data', 'Hora', 'Data / Hora', 'UmidadeRelativa_0', 'PressaoAtmosferica_0', 'Temperatura do Ar_0', 'TemperaturaInterna_0', 'PontoDeOrvalho_0', 'SensacaoTermica_0', 'RadiacaoSolar_0', 'DirecaoDoVento_0', 'VelocidadeDoVento_0', 'Precipitacao_0', 'Local_0', 'UmidadeRelativa_1', 'PressaoAtmosferica_1', 'Temperatura do Ar_1', 'TemperaturaInterna_1', 'PontoDeOrvalho_1', 'SensacaoTermica_1', 'RadiacaoSolar_1', 'DirecaoDoVento_1', 'VelocidadeDoVento_1', 'Precipitacao_1', 'Local_1', 'UmidadeRelativa_2', 'PressaoAtmosferica_2', 'Temperatura do Ar_2', 'TemperaturaInterna_2', 'PontoDeOrvalho_2', 'SensacaoTermica_2', 'RadiacaoSolar_2', 'DirecaoDoVento_2', 'VelocidadeDoVento_2', 'Precipitacao_2', 'Local_2', 'UmidadeRelativa_3', 'PressaoAtmosferica_3', 'Temperatura do Ar_3', 'TemperaturaInterna_3', 'PontoDeOrvalho_3', 'SensacaoTermica_3', 'RadiacaoSolar_3', 'DirecaoDoVento_3', 'VelocidadeDoVento_3', 'Precipitacao_3', 'Local_3', 'UmidadeRelativa_4', 'PressaoAtmosferica_4', 'Temperatura do Ar_4', 'TemperaturaInterna_4', 'PontoDeOrvalho_4', 'SensacaoTermica_4', 'RadiacaoSolar_4', 'DirecaoDoVento_4', 'VelocidadeDoVento_4', 'Precipitacao_4', 'Local_4']\n"
+      "['Data', 'Hora', 'Data_Hora', 'UmidadeRelativa_0', 'PressaoAtmosferica_0', 'TemperaturaDoAr_0', 'TemperaturaInterna_0', 'PontoDeOrvalho_0', 'SensacaoTermica_0', 'RadiacaoSolar_0', 'DirecaoDoVento_0', 'VelocidadeDoVento_0', 'Precipitacao_0', 'Local_0', 'UmidadeRelativa_1', 'PressaoAtmosferica_1', 'TemperaturaDoAr_1', 'TemperaturaInterna_1', 'PontoDeOrvalho_1', 'SensacaoTermica_1', 'RadiacaoSolar_1', 'DirecaoDoVento_1', 'VelocidadeDoVento_1', 'Precipitacao_1', 'Local_1', 'UmidadeRelativa_2', 'PressaoAtmosferica_2', 'TemperaturaDoAr_2', 'TemperaturaInterna_2', 'PontoDeOrvalho_2', 'SensacaoTermica_2', 'RadiacaoSolar_2', 'DirecaoDoVento_2', 'VelocidadeDoVento_2', 'Precipitacao_2', 'Local_2', 'UmidadeRelativa_3', 'PressaoAtmosferica_3', 'TemperaturaDoAr_3', 'TemperaturaInterna_3', 'PontoDeOrvalho_3', 'SensacaoTermica_3', 'RadiacaoSolar_3', 'DirecaoDoVento_3', 'VelocidadeDoVento_3', 'Precipitacao_3', 'Local_3', 'UmidadeRelativa_4', 'PressaoAtmosferica_4', 'TemperaturaDoAr_4', 'TemperaturaInterna_4', 'PontoDeOrvalho_4', 'SensacaoTermica_4', 'RadiacaoSolar_4', 'DirecaoDoVento_4', 'VelocidadeDoVento_4', 'Precipitacao_4', 'Local_4']\n"
      ]
     },
     {
@@ -53,17 +53,17 @@
        "      <th></th>\n",
        "      <th>Data</th>\n",
        "      <th>Hora</th>\n",
-       "      <th>Data / Hora</th>\n",
+       "      <th>Data_Hora</th>\n",
        "      <th>UmidadeRelativa_0</th>\n",
        "      <th>PressaoAtmosferica_0</th>\n",
-       "      <th>Temperatura do Ar_0</th>\n",
+       "      <th>TemperaturaDoAr_0</th>\n",
        "      <th>TemperaturaInterna_0</th>\n",
        "      <th>PontoDeOrvalho_0</th>\n",
        "      <th>SensacaoTermica_0</th>\n",
        "      <th>RadiacaoSolar_0</th>\n",
        "      <th>...</th>\n",
        "      <th>PressaoAtmosferica_4</th>\n",
-       "      <th>Temperatura do Ar_4</th>\n",
+       "      <th>TemperaturaDoAr_4</th>\n",
        "      <th>TemperaturaInterna_4</th>\n",
        "      <th>PontoDeOrvalho_4</th>\n",
        "      <th>SensacaoTermica_4</th>\n",
@@ -201,14 +201,14 @@
        "</div>"
       ],
       "text/plain": [
-       "       Data      Hora        Data / Hora  UmidadeRelativa_0  \\\n",
+       "       Data      Hora        Data_Hora  UmidadeRelativa_0  \\\n",
        "0  31/12/11  23:46:34  31/12/11 23:46:34               94.2   \n",
        "1  31/12/11  23:30:32  31/12/11 23:30:32               94.3   \n",
        "2  31/12/11  23:16:32  31/12/11 23:16:32               94.2   \n",
        "3  31/12/11  23:00:32  31/12/11 23:00:32               94.2   \n",
        "4  31/12/11  22:46:32  31/12/11 22:46:32               94.2   \n",
        "\n",
-       "   PressaoAtmosferica_0  Temperatura do Ar_0  TemperaturaInterna_0  \\\n",
+       "   PressaoAtmosferica_0  TemperaturaDoAr_0  TemperaturaInterna_0  \\\n",
        "0                 916.9                 18.9                  22.5   \n",
        "1                 917.0                 18.8                  22.4   \n",
        "2                 917.0                 18.8                  22.4   \n",
@@ -222,7 +222,7 @@
        "3              17.8                NaN              0.0  ...   \n",
        "4              17.9                NaN              0.0  ...   \n",
        "\n",
-       "   PressaoAtmosferica_4  Temperatura do Ar_4  TemperaturaInterna_4  \\\n",
+       "   PressaoAtmosferica_4  TemperaturaDoAr_4  TemperaturaInterna_4  \\\n",
        "0                   NaN                  NaN                   NaN   \n",
        "1                   NaN                  NaN                   NaN   \n",
        "2                   NaN                  NaN                   NaN   \n",
