--- a/src/Notebooks/1_Clean/1.0 - Validate_Dates.ipynb
+++ b/src/Notebooks/1_Clean/1.0 - Validate_Dates.ipynb
@@ -16,8 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged = pd.read_csv('../../../data/cleandata/Info pluviometricas/Merged Data/merged.csv',\n",
-    "                     sep = ';')"
+    "merged = pd.read_csv('../../../data/cleandata/Info pluviometricas/Merged Data/merged.csv', sep = ';')"
    ]
   },
   {
@@ -26,8 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged['Data_Hora'] = pd.to_datetime(merged['Data_Hora'],\n",
-    "                                     yearfirst= True).sort_values(ascending =  True)"
+    "merged['Data_Hora'] = pd.to_datetime(merged['Data_Hora'], yearfirst= True).sort_values(ascending =  True)"
    ]
   },
   {
