--- a/src/Notebooks/1_Clean/Get LAT_LNG - Enchentes.ipynb
+++ b/src/Notebooks/1_Clean/Get LAT_LNG - Enchentes.ipynb
@@ -121,7 +121,7 @@
     "                enchentes.loc[index, 'lng'] = 'Error'\n",
     "                enchentes.loc[index, 'status'] = 3\n",
     "                \n",
-    "back_up = enchentes.copy(deep = True)"
+    "backup = enchentes.copy(deep = True)"
    ]
   },
   {
@@ -131,7 +131,7 @@
    "outputs": [],
    "source": [
     "for i in range(4):\n",
-    "    len_ = len(back_up[back_up['status'] == i])\n",
+    "    len_ = len(backup[backup['status'] == i])\n",
     "    print(f'status {i}: {len_}')"
    ]
   },
@@ -148,10 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "back_up.to_csv(\n",
-    "    r'../../../data/cleandata/Ordens de serviço/Enchentes_LatLong.csv',\n",
-    "    sep=';',\n",
-    "    index=False)"
+    "backup.to_csv(r'../../../data/cleandata/Ordens de serviço/Enchentes_LatLong.csv', sep=';', index=False)"
    ]
   }
  ],
