--- a/src/Notebooks/1_Clean/Clean - Info Pluviometrica.ipynb
+++ b/src/Notebooks/1_Clean/Clean - Info Pluviometrica.ipynb
@@ -14,11 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import sys\n",
@@ -282,9 +281,9 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit ('base': conda)",
+   "display_name": "Python 3.8.3 64-bit ('venv': venv)",
    "language": "python",
-   "name": "python37464bitbaseconda7e5673f44381479f842fe1694b809563"
+   "name": "python_defaultSpec_1597707860564"
   },
   "language_info": {
    "codemirror_mode": {
@@ -296,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3-final"
   },
   "toc": {
    "base_numbering": 1,
