Testing XGBoost on clusters 1 and 2

--- a/src/Notebooks/3_Cluster/0.1_Clustering_Tipos_Chuva.ipynb
+++ b/src/Notebooks/3_Cluster/0.1_Clustering_Tipos_Chuva.ipynb
@@ -1511,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "metadata": {
     "tags": []
    },
@@ -1519,7 +1519,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Cluster 0: 89.38% (chuvas fracas/sem chuva)\nCluster 1: 9.15% (chuvas perigosas)\nCluster 2: 1.11% (???)\nCluster 3: 0.36% (chuvas fortes?)\n"
+     "text": "Cluster 0: 89.38% (chuvas fracas/sem chuva)\nCluster 1: 9.15% (chuvas perigosas)\nCluster 2: 1.11% (chuvas fortes?)\nCluster 3: 0.36% (???)\n"
     },
     {
      "output_type": "execute_result",
@@ -1528,14 +1528,14 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Data</th>\n      <th>UmidadeRelativa</th>\n      <th>PressaoAtmosferica</th>\n      <th>TemperaturaDoAr</th>\n      <th>TemperaturaInterna</th>\n      <th>PontoDeOrvalho</th>\n      <th>RadiacaoSolar</th>\n      <th>DirecaoDoVento</th>\n      <th>VelocidadeDoVento</th>\n      <th>Precipitacao</th>\n      <th>Ordens</th>\n      <th>Ano</th>\n      <th>Mes</th>\n      <th>Dia</th>\n    </tr>\n    <tr>\n      <th>Cluster</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2744</td>\n      <td>2744</td>\n      <td>2744</td>\n      <td>2744</td>\n      <td>2744</td>\n      <td>2744</td>\n      <td>2744</td>\n      <td>2744</td>\n      <td>2744</td>\n      <td>2744</td>\n      <td>2744</td>\n      <td>2744</td>\n      <td>2744</td>\n      <td>2744</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>281</td>\n      <td>281</td>\n      <td>281</td>\n      <td>281</td>\n      <td>281</td>\n      <td>281</td>\n      <td>281</td>\n      <td>281</td>\n      <td>281</td>\n      <td>281</td>\n      <td>281</td>\n      <td>281</td>\n      <td>281</td>\n      <td>281</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>34</td>\n      <td>34</td>\n      <td>34</td>\n      <td>34</td>\n      <td>34</td>\n      <td>34</td>\n      <td>34</td>\n      <td>34</td>\n      <td>34</td>\n      <td>34</td>\n      <td>34</td>\n      <td>34</td>\n      <td>34</td>\n      <td>34</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>11</td>\n      <td>11</td>\n      <td>11</td>\n      <td>11</td>\n      <td>11</td>\n      <td>11</td>\n      <td>11</td>\n      <td>11</td>\n      <td>11</td>\n      <td>11</td>\n      <td>11</td>\n      <td>11</td>\n      <td>11</td>\n      <td>11</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 28
+     "execution_count": 50
     }
    ],
    "source": [
     "print(f\"Cluster 0: {round(df_prec.groupby('Cluster').count().iloc[0,0] / df_prec.groupby('Cluster').count()['Mes'].sum() * 100, 2)}% (chuvas fracas/sem chuva)\")\n",
     "print(f\"Cluster 1: {round(df_prec.groupby('Cluster').count().iloc[1,0] / df_prec.groupby('Cluster').count()['Mes'].sum() * 100, 2)}% (chuvas perigosas)\")\n",
-    "print(f\"Cluster 2: {round(df_prec.groupby('Cluster').count().iloc[2,0] / df_prec.groupby('Cluster').count()['Mes'].sum() * 100, 2)}% (???)\")\n",
-    "print(f\"Cluster 3: {round(df_prec.groupby('Cluster').count().iloc[3,0] / df_prec.groupby('Cluster').count()['Mes'].sum() * 100, 2)}% (chuvas fortes?)\")\n",
+    "print(f\"Cluster 2: {round(df_prec.groupby('Cluster').count().iloc[2,0] / df_prec.groupby('Cluster').count()['Mes'].sum() * 100, 2)}% (chuvas fortes?)\")\n",
+    "print(f\"Cluster 3: {round(df_prec.groupby('Cluster').count().iloc[3,0] / df_prec.groupby('Cluster').count()['Mes'].sum() * 100, 2)}% (???)\")\n",
     "df_prec.groupby('Cluster').count()"
    ]
   },
@@ -2535,11 +2535,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_cluster.to_csv('../../../data/cleandata/Info pluviometricas/Merged Data/clustered.csv', sep = ';', index=False)"
+    "df_cluster.to_csv('../../../data/cleandata/Info pluviometricas/Merged Data/clustered_data.csv', sep = ';', index=False)"
    ]
   },
   {
@@ -2574,6 +2574,37 @@
    "source": [
     "pandas_gbq.to_gbq(df_cluster, TABLE_clustered, project_id=PROJECT_ID, credentials=CREDENTIALS, if_exists='replace')\n",
     "print('clustered done!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "                  Data_Hora        Local  UmidadeRelativa  PressaoAtmosferica  \\\n0       2011-01-01 00:00:00  Camilopolis             84.8               920.6   \n1       2011-01-01 00:00:00           RM             86.6               926.7   \n2       2011-01-01 00:00:00      Paraiso             92.3               919.1   \n3       2011-01-01 00:00:00       Erasmo             88.8               920.5   \n4       2011-01-01 00:00:00      Vitoria              0.0                 0.0   \n...                     ...          ...              ...                 ...   \n1463565 2019-06-30 23:45:00           RM             66.9               931.9   \n1463566 2019-06-30 23:45:00       Erasmo             60.7               925.7   \n1463567 2019-06-30 23:45:00  Camilopolis             54.4               924.0   \n1463568 2019-06-30 23:45:00      Paraiso             55.3               924.2   \n1463569 2019-06-30 23:45:00      Vitoria             38.4               925.8   \n\n         TemperaturaDoAr  TemperaturaInterna  PontoDeOrvalho  RadiacaoSolar  \\\n0              20.200000                22.8       17.500000       0.000000   \n1              20.100000                23.3       17.800000       0.000000   \n2              19.300000                22.7       18.000000       0.000000   \n3              10.243265                22.9       17.700000       0.000000   \n4               0.000000                 0.0        0.000000       0.000000   \n...                  ...                 ...             ...            ...   \n1463565        18.800000                22.5       13.300000       0.294461   \n1463566        19.500000                22.5       11.700000       0.000000   \n1463567        20.800000                23.0       12.200000       0.073893   \n1463568        20.800000                22.1       11.790525       0.000000   \n1463569        20.300000                27.5        6.300000       0.000000   \n\n         DirecaoDoVento  VelocidadeDoVento  Precipitacao  Ordens  Cluster  \n0                 137.0                1.5           0.0       0        0  \n1                 131.0                2.5           0.0       0        0  \n2                 101.0                2.6           0.0       0        0  \n3                 133.0                0.7           0.0       0        0  \n4                   0.0                0.0           0.0       0        0  \n...                 ...                ...           ...     ...      ...  \n1463565           331.0                0.7           0.0       0        0  \n1463566           327.0                3.5           0.0       0        0  \n1463567           332.0                4.3           0.0       0        0  \n1463568            25.0                3.6           0.0       0        0  \n1463569             0.0                0.0           0.0       0        0  \n\n[1463570 rows x 13 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Data_Hora</th>\n      <th>Local</th>\n      <th>UmidadeRelativa</th>\n      <th>PressaoAtmosferica</th>\n      <th>TemperaturaDoAr</th>\n      <th>TemperaturaInterna</th>\n      <th>PontoDeOrvalho</th>\n      <th>RadiacaoSolar</th>\n      <th>DirecaoDoVento</th>\n      <th>VelocidadeDoVento</th>\n      <th>Precipitacao</th>\n      <th>Ordens</th>\n      <th>Cluster</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2011-01-01 00:00:00</td>\n      <td>Camilopolis</td>\n      <td>84.8</td>\n      <td>920.6</td>\n      <td>20.200000</td>\n      <td>22.8</td>\n      <td>17.500000</td>\n      <td>0.000000</td>\n      <td>137.0</td>\n      <td>1.5</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2011-01-01 00:00:00</td>\n      <td>RM</td>\n      <td>86.6</td>\n      <td>926.7</td>\n      <td>20.100000</td>\n      <td>23.3</td>\n      <td>17.800000</td>\n      <td>0.000000</td>\n      <td>131.0</td>\n      <td>2.5</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2011-01-01 00:00:00</td>\n      <td>Paraiso</td>\n      <td>92.3</td>\n      <td>919.1</td>\n      <td>19.300000</td>\n      <td>22.7</td>\n      <td>18.000000</td>\n      <td>0.000000</td>\n      <td>101.0</td>\n      <td>2.6</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2011-01-01 00:00:00</td>\n      <td>Erasmo</td>\n      <td>88.8</td>\n      <td>920.5</td>\n      <td>10.243265</td>\n      <td>22.9</td>\n      <td>17.700000</td>\n      <td>0.000000</td>\n      <td>133.0</td>\n      <td>0.7</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2011-01-01 00:00:00</td>\n      <td>Vitoria</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1463565</th>\n      <td>2019-06-30 23:45:00</td>\n      <td>RM</td>\n      <td>66.9</td>\n      <td>931.9</td>\n      <td>18.800000</td>\n      <td>22.5</td>\n      <td>13.300000</td>\n      <td>0.294461</td>\n      <td>331.0</td>\n      <td>0.7</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1463566</th>\n      <td>2019-06-30 23:45:00</td>\n      <td>Erasmo</td>\n      <td>60.7</td>\n      <td>925.7</td>\n      <td>19.500000</td>\n      <td>22.5</td>\n      <td>11.700000</td>\n      <td>0.000000</td>\n      <td>327.0</td>\n      <td>3.5</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1463567</th>\n      <td>2019-06-30 23:45:00</td>\n      <td>Camilopolis</td>\n      <td>54.4</td>\n      <td>924.0</td>\n      <td>20.800000</td>\n      <td>23.0</td>\n      <td>12.200000</td>\n      <td>0.073893</td>\n      <td>332.0</td>\n      <td>4.3</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1463568</th>\n      <td>2019-06-30 23:45:00</td>\n      <td>Paraiso</td>\n      <td>55.3</td>\n      <td>924.2</td>\n      <td>20.800000</td>\n      <td>22.1</td>\n      <td>11.790525</td>\n      <td>0.000000</td>\n      <td>25.0</td>\n      <td>3.6</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1463569</th>\n      <td>2019-06-30 23:45:00</td>\n      <td>Vitoria</td>\n      <td>38.4</td>\n      <td>925.8</td>\n      <td>20.300000</td>\n      <td>27.5</td>\n      <td>6.300000</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>1463570 rows × 13 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 47
+    }
+   ],
+   "source": [
+    "df_clustered_total = df_grouped.merge(df_prec[['Data', 'Cluster']], on='Data').drop(columns = 'Data')\n",
+    "df_clustered_total['Ordens'] = df_clustered_total['Ordens'].shift(-1, fill_value = 0)\n",
+    "df_clustered_total.loc[df_clustered_total['Ordens'] >= 1, 'Ordens'] = 1\n",
+    "df_clustered_total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clustered_total.to_csv('../../../data/cleandata/Info pluviometricas/Merged Data/clustered.csv', sep = ';', index=False)"
    ]
   }
  ]
