--- a/src/Notebooks/3_Cluster/1.2_cluster_ordem_de_servico_todas_datas.ipynb
+++ b/src/Notebooks/3_Cluster/1.2_cluster_ordem_de_servico_todas_datas.ipynb
@@ -7,32 +7,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "pd.to_datetime(['01/08/2019','30/01/2019'], dayfirst = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = 'https://raw.githubusercontent.com/tbrugz/geodata-br/master/geojson/geojs-35-mun.json'\n",
-    "\n",
-    "from urllib.request import urlopen\n",
-    "import json\n",
-    "with urlopen(path) as response:\n",
-    "    counties = json.load(response)\n",
-    "    \n",
-    "SA = [ i for i in counties['features'] if i['properties']['name'] == 'Santo André' ][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.cluster import KMeans\n",
     "import matplotlib.pyplot as plt\n",
@@ -52,34 +26,8 @@
     "df = pd.read_csv('../../../data/cleandata/Ordens de serviço/Enchentes_LatLong.csv',\n",
     "                 sep = ';')\n",
     "\n",
-    "est = pd.read_csv('../../../data/cleandata/Estacoes/lat_lng_estacoes.csv', sep = ';')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "est"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "est = est.iloc[1:-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "est"
+    "est = pd.read_csv('../../../data/cleandata/Estacoes/lat_lng_estacoes.csv', sep = ';')\n",
+    "est = est.iloc[:-1] # Remove OpenWeather"
    ]
   },
   {
@@ -183,10 +131,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def days_hours_minutes(td):\n",
+    "    return int(td.days), td.seconds//3600, (td.seconds//60)%60\n",
+    "\n",
+    "start, stop = ord_serv['Data'].iloc[0], ord_serv['Data'].iloc[-1]\n",
+    "\n",
+    "from datetime import date, timedelta\n",
+    "# Criar Vetor de data (15 em 15 minutos )\n",
+    "\n",
+    "d,h,m = days_hours_minutes(stop - start)\n",
+    "total_days = d + h/24 + m/24/60 + (1)\n",
+    "\n",
+    "date_vec= [start + timedelta(x) for x in \n",
+    "          np.arange(0, total_days, 1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "my_index = np.sort(ord_serv['pos'].unique())\n",
     "my_cols = ord_serv.Data.dt.strftime('%Y-%m-%d').unique()\n",
     "\n",
-    "df = pd.DataFrame(columns=list(my_cols), index = list(my_index))\n",
+    "df = pd.DataFrame(columns=list(date_vec), index = list(my_index))\n",
     "df.loc[:,:] = 0"
    ]
   },
@@ -202,8 +171,8 @@
     "day_delta = 4\n",
     "for d in df.columns:\n",
     "\n",
-    "    lim_dates = [datetime.strptime(d, '%Y-%m-%d') + timedelta(days=-day_delta),\n",
-    "                 datetime.strptime(d, '%Y-%m-%d') + timedelta(days=day_delta)]\n",
+    "    lim_dates = [d + timedelta(days=-day_delta),\n",
+    "                 d + timedelta(days=day_delta)]\n",
     "\n",
     "    selected_dates = ord_serv[(ord_serv['Data'] > lim_dates[0]) &\n",
     "                        (ord_serv['Data'] <= lim_dates[1])]\n",
@@ -218,7 +187,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.max()"
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "fig = go.Figure()\n",
+    "fig.add_trace(go.Heatmap(z=df.values,\n",
+    "                         x=df.columns,\n",
+    "                         colorscale = 'gray',\n",
+    "                         reversescale=True,\n",
+    "                         showscale=False)\n",
+    "             )\n",
+    "fig.update_layout()\n",
+    "fig.show()"
    ]
   },
   {
