Include threshold filter on LocalMax

--- a/src/Notebooks/2_Repair/3.0_Get_labels.ipynb
+++ b/src/Notebooks/2_Repair/3.0_Get_labels.ipynb
@@ -1083,7 +1083,11 @@
     "\n",
     "for i in range(6):\n",
     "    df_m.loc[:, f'LocalMax_{i}'] = df_m['LocalMax']\n",
-    "    df_m.loc[df_m[f'Precipitacao_{i}'] < rain_threshold, f'LocalMax_{i}'] = 0"
+    "    df_m.loc[df_m[f'Precipitacao_{i}'] < rain_threshold, f'LocalMax_{i}'] = 0\n",
+    "    \n",
+    "lm_cols = [c for c in df_m.columns if 'LocalMax_' in c]\n",
+    "df_m.loc[(df_m[lm_cols].max(axis = 1) == 0) & (df_m['LocalMax'] == 1), 'LocalMax'] = 0\n",
+    "n_remove = len(df_m.loc[(df_m[lm_cols].max(axis = 1) == 0) & (df_m['LocalMax'] == 1), 'LocalMax'])"
    ]
   },
   {
